# LVGL_Weather

./: DigiCert Global Root CA.crt  LVGL_Weather.ino  credentials.h  listboxView.cpp  listboxView.h  prefs.h  utilities.h  weather.h
squareline/: chumby_v2.sll  chumby_v2.spj  chumby_v2_events.py
src/: network.cpp  network.h  ntpTime.cpp  ntpTime.h
src/models/: networkSettingsModel.cpp  networkSettingsModel.h
src/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.cpp  ui_events.h
src/ui/components/: ui_comp.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_standardbutton.c  ui_comp_standardbutton.h
src/ui/fonts/: arial_160.c  arial_40.c
src/ui/screens/: ui_TimeScreen.c  ui_chooseConnection.c  ui_loadingScreen.c  ui_newOrExistingConnections.c  ui_passphrase.c  ui_setTimeScreen.c
src/views/: networkSettingsView.cpp  networkSettingsView.h
